# Note_Python

./: .gitignore  AutoGen源码分析.md  AutoGen源码解析.md  FastAPI.md  FastAPI进阶用法与分析.md  HTTP笔记.md  JSONPath.md  JSONSchema.md  LlamaIndex.md  PyYAML.md  Python魔术方法.md  WebSocket.md  async深入学习.md  async笔记.md  logging.md  pip笔记.md  pydanitc.md  pytest.md  uv.md  变量作用域.md  文档网站搭建.md
__init__/: main_init.py  main_usual.py  模块编写的初步理解.md
__init__/arithmetic/: __init__.py  __init__simple.py  print_a4.py  print_hello_up.py  test.py
__init__/folder_b/: fb.py
argparse/: test.py
async/async_await/: main.py  test.py
async_await/: main01.py  main03.py  main04.py
codes/True_False_None/: main01.py  main_None.py  main_True_False.py
codes/decorator/: main01.py  main02.py  main03.py  main05.py  main07.py  main08.py  main09_staticmethod_classmethod.py
codes/descriptor/: main.py  main01.py
codes/generator/: main01.py
codes/iterator/: main01.py
codes/json_load_dump/: test_dict.json  test_list.json  test_num.json
codes/pytest_example/: main.py
codes/thread_process_async/: 03_lock_concurrent.py  (+9 more)
decorator/: main01.py  main03.py  main04.py  main06.py
generator/: main.py  main02.py
iterator/: main.py
json_load_dump/: json_load.py
learn_llamaindex/: E1_quickstart.py  E2_document_node.py  E3_s3fs_reader.py  E4_ingestpp.py  Ex_async_qdrant.py  pyproject.toml  zz.py
logging/: test_logger.py  test_logging.py  test_multi_gpu.py
path/: main.py
thread_process_async/: 01_multi_thread_craw.py  07_flask_proess_pool.py  blog_spider.py  test_thread.py
xml/: test.py  test.xml
(+16 files in other folders)
