[project]
name = "learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "llama-index>=0.14.10",
    "llama-index-embeddings-openai-like>=0.2.2",
    "llama-index-llms-openai-like>=0.5.3",
    "llama-index-storage-index-store-postgres>=0.5.1",
    "llama-index-vector-stores-qdrant>=0.9.0",
    "matplotlib>=3.10.8",
    "python-pptx>=1.0.2",
    "qdrant-client>=1.16.2",
    "s3fs>=2025.12.0",
]
